<resources>
    <string name="app_name">Traveller</string>
    <string name="navigation_drawer_open"> open navigation drawer</string>
    <string name="navigation_drawer_close"> close navigation drawer</string>
    <string name="we_pursue_a_rleaxed_experience">We pursue a rleaxed experience</string>
    <string name="create_account">Create Account</string>
    <string name="sign_in">Sign In</string>
    <string name="get_sarted">Get Sarted</string>
    <string name="welcome">welcome</string>
    <string name="Sign_in">Sign In</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="hello_there_sign_in_to_continuee">Hello there, sign in to continue!</string>
    <string name="todoo">TODO</string>
    <string name="user_name">User Name</string>
    <string name="passwordss">Password</string>
    <string name="malak_Hesham">Malak Hesham...</string>
    <string name="Password">Password</string>
    <string name="title_activity_sign__in2">ScrollingActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>
    <string name="hello_there_sign_in_to_continue">Hello there, sign in to continue!</string>
    <string name="username">Username</string>
    <string name="malak_hesham">Malak Hesham...</string>
    <string name="Sign_up">Sign Up</string>
    <string name="it_s_free_and_always_will_be">It\'s free and always will be.</string>
    <string name="Todo">TODO</string>
    <string name="add_photo">Add Photo</string>
    <string name="edit_photo">Edit Photo</string>
    <string name="todO">TODO</string>
    <string name="email">Email</string>
    <string name="last_name">Last Name</string>
    <string name="hesham">Hesham...</string>
    <string name="malakhesham99_gmail_com">MalakHesham99@Gmail.com</string>
    <string-array name="nationality">
        <item>Egyptian</item>
        <item>Jordanian</item>
        <item>Moroccan</item>
        <item>Omani</item>
        <item>Tunisian</item>
        <item>Turkish</item>
        <item>Lebanese</item>
        <item>Iraqi</item>
        <item>Iranian</item>
        <item>Palestinian</item>
        <item>Yemeni</item>
        <item>Syrian</item>
        <item>Bahrain</item>
        <item>Persian</item>
        <item>Emirates</item>
        <item>Saudis</item>
        <item>Turkish</item>
        <item>European</item>
        <item>Australian</item>
        <item>American</item>
        <item>Asian</item>
        <item>North American</item>
        <item>Other</item>
    </string-array>
    <string name="malak">Malak...</string>
    <string name="Hesham">Hesham...</string>
    <string name="malakhesham98_gmail_com">MalakHesham99@Gmail.Com</string>
    <string name="password">Password</string>
    <string name="passwords">***************</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="conpasswords">***************</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="_01091792866">01091792866</string>
    <string name="date_of_birth">Date Of Birth</string>
    <string name="_2_2_1999">2/2/1999</string>
    <string name="malak_heshamm">Malak Hesham</string>
    <string name="sign_inn">Sign in</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="gender">Gender</string>
    <string name="egyptian">Egyptian</string>
    <string name="i_agree_to_the_terms_and_conditions">I agree to the terms and conditions.</string>
    <string name="sign_up">Sign Up</string>
    <string name="first_name">First Name</string>
    <string name="Malak_hesham99">Malak Hesham99</string>
    <string name="malak_hesham99">Malak Hesham99</string>
    <string name="home_page">Home Page</string>
    <string name="todo11">todo11</string>
    <string name="Entertainment">Entertainment</string>
    <string name="events">Events</string>
    <string name="plans">Plans</string>
    <string name="emergency">Emergency</string>
    <string name="entertainment">Entertainment</string>
    <string name="amusement_parks">Amusement Parks</string>
    <string name="cinema">Cinema</string>
    <string name="gaming">Gaming</string>
    <string name="tourism">Tourism</string>
    <string name="restaurants">Restaurants</string>
    <string name="view_all_details">Details</string>
    <string name="_1337_1_km_from_your_location">1337.1 Km from your location</string>
    <string name="ttttodo">TODO</string>
    <string name="Amusement_parks">Amusement Parks</string>
    <string name="dream_park">Dream Park</string>
    <string name="_90_100">90/100</string>
    <string name="_16949_ratings">16949 Ratings</string>
    <string name="toDo">TODO</string>
    <string name="Get_location">location</string>
    <string name="get_location">location</string>
    <string name="faby_land">Faby Land</string>
    <string name="aqua_park">Aqua Park</string>
    <string name="geT_location">Get location</string>
    <string name="gero_land">Gero Land</string>
    <string name="super_spin_tornado_top_spin_stimulator_shoot_and_drop_roller_coaster">Super Spin - Tornado - Top Spin - Stimulator - Shoot and Drop - Roller Coaster</string>
    <string name="x_x_x_x_x_x">X X X X X X</string>
    <string name="pay_now">Pay Now</string>
    <string name="cancel">Cancel</string>
    <string name="sound_and_light_show">Sound and Light Show</string>
    <string name="_650_egp">650 EGP</string>
    <string name="february_2_1999">February 2.1999</string>
    <string name="expiration_date">* Expiration Date</string>
    <string name="card_holder_name">* Card Holder Name</string>
    <string name="security_code_cvv">* Security Code (CVV)</string>
    <string name="mm_yy">MM/ YY</string>
    <string name="enter_your_card_number_here">Enter your card number here...</string>
    <string name="card_number">* Card Number</string>
    <string name="lafa98">Lafa98</string>
    <string name="credit_debit_card">Credit/ Debit Card</string>
    <string name="payment_info">Payment info</string>
    <string name="_09_03_pm">09.03 PM</string>
    <string name="get_promocode">Get Promocode</string>
    <string name="todo">TODO</string>
</resources>