<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.bis.lafefny.Payment"
    android:background="#E6DFE0">

<RelativeLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    >
    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:layout_width="match_parent"
        android:layout_height="330dp"
        android:id="@+id/booking_background">


        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="165dp"
            android:layout_marginTop="70dp"
            android:alpha="0.2"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:background="@drawable/unnamed"
            android:backgroundTint="@color/Grey"
            android:contentDescription="@string/todo" />

        <TextView
            android:id="@+id/txt_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="145dp"
            android:layout_marginTop="95dp"
            android:fontFamily="serif"
            android:text="@string/sound_and_light_show"
            android:textColor="@color/Grey"
            android:textSize="19sp"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/txt_total"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="160dp"
            android:layout_marginTop="125dp"
            android:fontFamily="serif"
            android:text="@string/_650_egp"
            android:textColor="@color/Grey"
            android:textSize="19sp" />

        <ImageView
            android:layout_width="372dp"
            android:layout_height="147dp"
            android:layout_marginStart="21dp"
            android:layout_marginTop="85dp"
            android:alpha="0.2"
            android:background="@drawable/line"
            android:contentDescription="@string/todo" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="138dp"
            android:layout_marginTop="185dp"
            android:alpha="0.6"
            android:background="@drawable/line"
            android:backgroundTint="@color/Grey"
            android:contentDescription="@string/todo" />


        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="255dp"
            android:layout_marginStart="330dp"
            android:background="@drawable/ic_baseline_credit_card_24"
            android:contentDescription="@string/todo" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="122dp"
            android:layout_marginTop="245dp"
            android:alpha="0.6"
            android:background="@drawable/line"
            android:backgroundTint="@color/Grey"
            android:contentDescription="@string/todo" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="275dp"
            android:layout_marginStart="30dp"
            android:background="@drawable/ic_baseline_check_24"
            android:contentDescription="@string/todo" />

        <TextView
            android:id="@+id/txt_creditcard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="59dp"
            android:layout_marginTop="265dp"
            android:fontFamily="serif"
            android:text="@string/credit_debit_card"
            android:textColor="@color/Lafefny2"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/txt_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="110dp"
            android:layout_marginTop="175dp"
            android:fontFamily="serif"
            android:text="@string/february_2_1999"
            android:textColor="@color/Grey"
            android:textSize="19sp" />
        <TextView
            android:id="@+id/txt_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="220dp"
            android:layout_marginTop="175dp"
            android:fontFamily="serif"
            android:text="@string/_09_03_pm"
            android:textColor="@color/Grey"
            android:textSize="19sp" />
        <TextView
            android:id="@+id/txt_payment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="90dp"
            android:layout_marginTop="5dp"
            android:fontFamily="serif"
            android:text="@string/payment_info"
            android:textColor="@color/Lafefny2"
            android:textSize="35sp"
            android:textStyle="bold" />
        <Button
            android:id="@+id/btn_back_pay"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="45dp"
            android:layout_height="wrap_content"
            android:onClick="PaymentOnClick"
            android:backgroundTint="@color/Lafefny1"
            android:drawableEnd="@drawable/ic_baseline_arrow_back_24" />
    </com.google.android.material.bottomnavigation.BottomNavigationView>

    <TextView
        android:id="@+id/txt_card_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="29dp"
        android:layout_marginTop="340dp"
        android:fontFamily="serif"
        android:text="@string/card_number"
        android:textColor="@color/Lafefny2"
        android:textSize="25sp"
        android:textStyle="italic" />

    <EditText
        android:id="@+id/pt_card_number"
        android:layout_width="357dp"
        android:layout_height="52dp"
        android:layout_below="@id/txt_card_number"
        android:layout_marginStart="30dp"
        android:layout_marginTop="7dp"
        android:background="@color/white"
        android:fontFamily="serif"
        android:hint="@string/enter_your_card_number_here"
        android:inputType="number"
        android:paddingStart="10dp"
        android:textColor="@color/Grey"
        android:autofillHints=""
        android:layout_marginEnd="0dp"/>

    <TextView
        android:id="@+id/txt_card_expiration_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt_card_number"
        android:layout_marginStart="29dp"
        android:layout_marginTop="76dp"
        android:fontFamily="serif"
        android:text="@string/expiration_date"
        android:textColor="@color/Lafefny2"
        android:textSize="25sp"
        android:textStyle="italic"
        android:layout_marginEnd="0dp"/>

    <EditText
        android:id="@+id/pt_card_expiration_date"
        android:layout_width="357dp"
        android:layout_height="65dp"
        android:layout_below="@id/txt_card_expiration_date"
        android:layout_marginStart="30dp"
        android:layout_marginTop="3dp"
        android:background="@color/white"
        android:fontFamily="serif"
        android:hint="@string/mm_yy"
        android:inputType="date"
        android:paddingStart="10dp"
        android:textColor="@color/Grey"
        android:autofillHints="" />

    <TextView
        android:id="@+id/txt_card_security"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt_card_number"
        android:layout_marginStart="29dp"
        android:layout_marginTop="195dp"
        android:fontFamily="serif"
        android:text="@string/security_code_cvv"
        android:textColor="@color/Lafefny2"
        android:textSize="25sp"
        android:textStyle="italic"
        android:layout_marginEnd="0dp"/>

    <EditText
        android:id="@+id/pt_card_security"
        android:layout_width="357dp"
        android:layout_height="56dp"
        android:layout_below="@id/txt_card_security"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:background="@color/white"
        android:fontFamily="serif"
        android:hint="@string/x_x_x_x_x_x"
        android:inputType="numberPassword"
        android:paddingStart="10dp"
        android:textColor="@color/Grey"
        android:autofillHints="" />

    <TextView
        android:id="@+id/txt_card_holder_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt_card_number"
        android:layout_marginStart="29dp"
        android:layout_marginTop="315dp"
        android:fontFamily="serif"
        android:text="@string/card_holder_name"
        android:textColor="@color/Lafefny2"
        android:textSize="25sp"
        android:textStyle="italic"
        android:layout_marginEnd="0dp"/>

    <EditText
        android:id="@+id/pt_card_holder_name"
        android:layout_width="357dp"
        android:layout_height="56dp"
        android:layout_below="@id/txt_card_holder_name"
        android:layout_marginStart="30dp"
        android:layout_marginTop="12dp"
        android:background="@color/white"
        android:fontFamily="serif"
        android:hint="@string/malak_heshamm"
        android:inputType="text"
        android:paddingStart="10dp"
        android:textColor="@color/Grey"
        android:autofillHints="" />

    <TextView
        android:id="@+id/txt_promo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt_card_number"
        android:layout_marginStart="29dp"
        android:layout_marginTop="426dp"
        android:fontFamily="serif"
        android:text="Promocode"
        android:textColor="@color/Lafefny2"
        android:textSize="25sp"
        android:textStyle="italic"
        android:layout_marginEnd="0dp"/>

    <EditText
        android:id="@+id/pt_promo"
        android:layout_width="200dp"
        android:layout_height="56dp"
        android:layout_below="@id/txt_promo"
        android:layout_marginStart="30dp"
        android:layout_marginTop="12dp"
        android:background="@color/white"
        android:fontFamily="serif"
        android:hint="@string/lafa98"
        android:inputType="text"
        android:paddingStart="10dp"
        android:textColor="@color/Grey"
        android:autofillHints="" />

    <Button
        android:id="@+id/btn_promo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt_card_holder_name"
        android:layout_marginStart="245dp"
        android:layout_marginTop="125dp"
        android:backgroundTint="@color/white"
        android:fontFamily="serif"
        android:onClick="PaymentOnClick"
        android:text="@string/get_promocode"
        android:textColor="@color/Grey"
        android:textSize="10sp" />

    <ImageView
        android:id="@+id/line"
        android:layout_width="371dp"
        android:layout_height="120dp"
        android:layout_below="@id/btn_promo"
        android:layout_marginStart="21dp"
        android:layout_marginTop="-36dp"
        android:alpha="0.2"
        android:background="@drawable/line"
        android:contentDescription="@string/todo" />

    <Button
        android:id="@+id/btn_pay_now"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/pt_promo"
        android:layout_marginEnd="0dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="26dp"
        android:backgroundTint="@color/white"
        android:fontFamily="serif"
        android:text="@string/pay_now"
        android:onClick="PaymentOnClick"
        android:textColor="@color/Lafefny2"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btn_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/pt_promo"
        android:layout_marginStart="240dp"
        android:layout_marginTop="26dp"
        android:backgroundTint="@color/white"
        android:fontFamily="serif"
        android:text="@string/cancel"
        android:layout_marginEnd="0dp"
        android:textColor="@color/Lafefny2"
        android:textSize="20sp"
        android:onClick="PaymentOnClick"/>

</RelativeLayout>
</ScrollView>