<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Lafefny1"
    tools:context="com.bis.lafefny.MainActivity2">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="320dp"
        android:contentDescription="@string/welcome"
        app:srcCompat="@drawable/welclogo" />

    <TextView
        android:id="@+id/txt_welc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="246dp"
        android:layout_marginEnd="35dp"
        android:fontFamily="cursive"
        android:text="@string/we_pursue_a_rleaxed_experience"
        android:textAlignment="center"
        android:textColor="@color/Lafefny2"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/txt_welc3"
        android:layout_width="205dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="185dp"
        android:layout_marginEnd="104dp"
        android:fontFamily="serif"
        android:text="@string/get_sarted"
        android:textAlignment="center"
        android:textColor="@color/Lafefny2"
        android:textSize="39sp" />

    <Button
        android:id="@+id/btn_signin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="25dp"
        android:layout_marginEnd="157dp"
        android:backgroundTint="@color/cardview_light_background"
        android:fontFamily="serif"
        android:padding="20dp"
        android:text="@string/sign_in"
        android:textColor="@color/Lafefny2"
        android:textSize="14sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btn_creatAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="102dp"
        android:layout_marginEnd="110dp"
        android:backgroundTint="@color/cardview_light_background"
        android:elevation="50dp"
        android:fontFamily="serif"
        android:padding="20dp"
        android:text="@string/create_account"
        android:textColor="@color/Lafefny2"
        android:textSize="14sp"
        android:textStyle="bold" />

</RelativeLayout>