<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_gravity="center_horizontal"
    android:background="@drawable/btnborder2"
    android:layout_marginBottom="10dp"
    >
    <ImageView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1.5"
        android:layout_marginHorizontal="15dp"
        android:src="@drawable/dream"
        android:scaleType="centerCrop"

        />
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="3"
        android:orientation="vertical"
        
        android:layout_marginVertical="10dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dream_park"
            android:textSize="25sp"
            android:textColor="@color/Purple"
            android:textStyle="bold"
            />
        <TextView
            android:id="@+id/txt_rating_dreampark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_90_100"
            android:textColor="@color/Grey"
            android:textSize="15sp"
            android:layout_margin="2dp"
            android:drawableStart="@drawable/happyface" />
        <TextView
            android:id="@+id/txt_rating_count_dreampark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_16949_ratings"
            android:textSize="15sp"
            android:textColor="@color/Grey"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginRight="20dp"
            >
            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/Grey"
                android:shadowColor="@color/Grey"
                android:layout_weight="1"
                android:textSize="9sp"
                android:gravity="center"
                android:textAlignment="center"
                android:padding="0dp"
                android:text="@string/view_all_details"
                android:textColor="@color/black"
                android:drawableEnd="@drawable/clicknext"

                />
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.1"/>
            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/Grey"
                android:shadowColor="@color/Grey"
                android:textSize="9sp"
                android:gravity="center"
                android:textAlignment="center"
                android:layout_gravity="bottom"
                android:layout_weight="1"
                android:text="@string/get_location"
                android:textColor="@color/black"
                android:drawableEnd="@drawable/ic_baseline_location3_on_24"
                android:padding="0dp"
                />

        </LinearLayout>
    </LinearLayout>


</LinearLayout>